--- a/SampleApp/MainPage.xaml
+++ b/SampleApp/MainPage.xaml
@@ -1,36 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Name="self"
              x:Class="SampleApp.MainPage">
-
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+    <ListView x:Name="listView"
+              ItemsSource="{Binding Options, Source={x:Reference self}}"
+              SelectionMode="Single"
+              ItemSelected="ItemSelected">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <Grid
+                        Margin="16, 5"
+                        ColumnDefinitions="*, Auto">
+                        <Label
+                            Text="{Binding Name}"
+                            FontSize="18"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Start"/>
+                        <Label
+                            VerticalOptions="Center"
+                            HorizontalOptions="Center"
+                            Grid.Column="1"
+                            Text=">"
+                            FontSize="18"/>
+                    </Grid>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
