PresenceViewer - Increase version to 1.0.0. Remove debug logging, ensure webview is loaded before executing JavaScriptEvaluation

--- a/SampleApp/Pages/PresenceViewerPage.xaml
+++ b/SampleApp/Pages/PresenceViewerPage.xaml
@@ -6,6 +6,7 @@
              x:Name="self"
              Title="PresenceViewerPage">
     <presence:DittoPresenceViewer
+        x:Name="presenceViewer"
         HorizontalOptions="Fill"
         VerticalOptions="Fill"
         Ditto="{Binding Ditto, Source={x:Reference self}}"/>
